--- a/android/bin/AndroidManifest.xml
+++ b/android/bin/AndroidManifest.xml
@@ -7,25 +7,34 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <!--  
         <activity
             android:name="com.walintukai.derpteam.SplashActivity"
             android:label="@string/app_name" >
+            
+        </activity>
+        -->
+        <activity
+            android:name="com.walintukai.derpteam.MainActivity"
+            android:label="@string/app_name" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.walintukai.derpteam.MainActivity"
-            android:label="@string/app_name" >
-        </activity>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id" />
+        <activity android:name="com.facebook.LoginActivity" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
