--- a/android/bin/AndroidManifest.xml
+++ b/android/bin/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         -->
         <activity
-            android:name="com.walintukai.derpteam.MainActivity"
+            android:name="com.walintukai.derpteam.LoginActivity"
             android:label="@string/app_name" >
             
             <intent-filter>
