--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -16,7 +16,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
@@ -26,30 +25,32 @@
             android:name="com.walintukai.derpteam.SplashActivity"
             android:label="@string/app_name" >
             
-        </activity>
+        </activity>
         -->
-        
+
         <activity
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.walintukai.derpteam.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.walintukai.derpteam.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
+        <activity
+            android:name="com.walintukai.derpteam.TakePictureActivity"
+            android:label="@string/title_activity_take_picture" >
+        </activity>
     </application>
 
 </manifest>
