--- a/android/bin/AndroidManifest.xml
+++ b/android/bin/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +26,7 @@
             android:name="com.walintukai.derpteam.SplashActivity"
             android:label="@string/app_name" >
             
-        </activity>
+        </activity>
         -->
 
         <activity
@@ -49,7 +50,9 @@
         </activity>
         <activity
             android:name="com.walintukai.derpteam.TakePictureActivity"
-            android:label="@string/title_activity_take_picture" >
+            android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
