--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name="com.walintukai.derpteam.SplashActivity"
             android:label="@string/app_name" >
             
-        </activity>
+        </activity>
         -->
 
         <activity
@@ -50,9 +50,13 @@
         </activity>
         <activity
             android:name="com.walintukai.derpteam.TakePictureActivity"
-            android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
             android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.walintukai.derpteam.GalleryActivity"
+            android:label="@string/title_activity_gallery" >
         </activity>
     </application>
 
