--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -56,7 +56,8 @@
         </activity>
         <activity
             android:name="com.walintukai.derpteam.GalleryActivity"
-            android:label="@string/title_activity_gallery" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
