--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -53,6 +53,11 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
+            <intent-filter>
+		        <action android:name="android.intent.action.SEND" />
+		        <category android:name="android.intent.category.DEFAULT" />
+		        <data android:mimeType="image/*" />
+		    </intent-filter>
         </activity>
         <activity
             android:name="com.walintukai.derpteam.GalleryActivity"
