--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -26,12 +26,13 @@
             android:name="com.walintukai.derpteam.SplashActivity"
             android:label="@string/app_name" >
             
-        </activity>
+        </activity>
         -->
 
         <activity
             android:name="com.facebook.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.walintukai.derpteam.LoginActivity"
@@ -54,13 +55,20 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
-		        <action android:name="android.intent.action.SEND" />
-		        <category android:name="android.intent.category.DEFAULT" />
-		        <data android:mimeType="image/*" />
-		    </intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="image/*" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.walintukai.derpteam.GalleryActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.walintukai.derpteam.PickFriendActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
