--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -47,7 +47,8 @@
         <activity
             android:name="com.walintukai.derpteam.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize" >
         </activity>
         <activity
             android:name="com.walintukai.derpteam.TakePictureActivity"
