working get pic including random

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//derp/settings.py=UTF-8
+encoding//derp_app/models.py=utf-8
 encoding//derp_app/views.py=utf-8
