--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name="com.walintukai.derpteam.DerpTeam"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -25,7 +26,7 @@
         <activity
             android:name="com.walintukai.derpteam.SplashActivity"
             android:label="@string/app_name" >
-        </activity>
+        </activity>
         -->
 
         <activity
@@ -45,14 +46,21 @@
         </activity>
         <activity
             android:name="com.walintukai.derpteam.MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="image/*" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.walintukai.derpteam.GalleryActivity"
+            android:label="@string/title_activity_gallery" >
+        </activity>
     </application>
+
 </manifest>
