--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application
+    <application android:name="com.leanplum.LeanplumApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -58,4 +58,5 @@
         </activity>
     </application>
 
+<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
