--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -27,7 +27,9 @@
             android:label="@string/app_name" >
         </activity>
         -->
-
+		
+		<receiver android:name=".MyAlarmReceiver" />
+		
         <activity
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name"
