--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
         -->
 		
-		<receiver android:name=".MyAlarmReceiver" />
+		<receiver android:name=".GetNotificationAlarmReceiver" />
 		
         <activity
             android:name="com.facebook.LoginActivity"
