--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.walintukai.derpteam"
     android:versionCode="1"
     android:versionName="1.0" >
     
-    
-
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
@@ -15,9 +14,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	
-	
-	
 	
     <application android:name="com.leanplum.LeanplumApplication"
         android:allowBackup="true"
@@ -43,10 +39,6 @@
 		    </intent-filter>
 		</receiver>
 		
-		
-		
-        
-        
         <receiver android:name=".GetNotificationAlarmReceiver" />
 
         <!--
