--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,9 +15,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	
-    <application android:name="com.leanplum.LeanplumApplication"
+    <application 
+        android:name="com.leanplum.LeanplumApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:logo="@drawable/ic_logo_wide"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
