--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest 
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.walintukai.derpteam"
-    android:versionCode="10"
-    android:versionName="1.9" >
+    android:versionCode="12"
+    android:versionName="2.1a" >
     
     <uses-sdk
         android:minSdkVersion="11"
